# ruslin-gtk-desktop

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: org.dianqk.ruslin.Devel.json  org.dianqk.ruslin.json
data/: org.dianqk.ruslin.desktop.in.in  org.dianqk.ruslin.gschema.xml.in  org.dianqk.ruslin.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style.css
po/: POTFILES.in
src/: app.rs  icons.rs  login_page.rs  main.rs  meson.build  properties.rs  setup.rs
src/components/: entry_dialog.rs  mod.rs
src/content_page/: mod.rs  note_editor_column.rs  note_list_column.rs  sidebar_column.rs
src/modals/: about.rs
