[package]
name = "ruslin"
version = "0.1.0"
authors = ["DianQK <dianqk@dianqk.net>"]
edition = "2021"
publish = false

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tracing-subscriber = "0.3"
relm4 = { version = "0.5.0-beta.5", features = ["libadwaita", "gnome_43"] }
adw = { version = "0.2", package = "libadwaita", features = ["v1_2", "gtk_v4_6"] }
gtk = { version = "0.5", package = "gtk4", features = ["v4_6"] }
